--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
            		   		<i class="fas fa-user"></i>
            		   </div>
            		   <div class="div">
-           		   		<h5>Username</h5>
+           		   		<h5>Nom utilisateur</h5>
            		   		<input type="text" class="input">
            		   </div>
            		</div>
